--- a/code/src/components/header/style.css
+++ b/code/src/components/header/style.css
@@ -1,5 +1,7 @@
 header {
   background: #FFDFE7;
+  display: flex;
+  align-items: center;
 }
 
 header a {
@@ -10,6 +12,48 @@ header a {
 }
 
 .header-grid {
+  display: none;
+}
+
+.hamburger-checkbox:checked + .header-grid {
   display: flex;
-  justify-content: space-between;
+  justify-content:space-between;
+  align-items: center;
+  flex-flow: column;
+  width: 100%;
+  left: -100%;
+  height: 200px;
+  transition: left 0.3s ease-out;
+}
+
+.hamburger-checkbox:checked + .hamburger-label{
+
+}
+
+.hamburger-label {
+  width: 70px;
+  height: 70px;
+  display: block;
+  background: red;
+  cursor: pointer;
+}
+
+.hamburger-checkbox {
+  display: none;
+}
+
+@media (min-width: 900px) {
+  .hamburger-label{
+    display:none;
+  }
+  .header-grid{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-flow: row;
+    height: 70px;
+  }
+  .hamburger-checkbox:checked + .header-grid{
+    left: 0;
+  }
 }
