--- a/code/src/components/header/style.css
+++ b/code/src/components/header/style.css
@@ -1,7 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+
 header {
   background: #FFDFE7;
-  display: flex;
-  align-items: center;
 }
 
 header a {
@@ -12,48 +14,52 @@ header a {
 }
 
 .header-grid {
-  display: none;
-}
-
-.hamburger-checkbox:checked + .header-grid {
+  background: #FFDFE7;
+  position: absolute;
   display: flex;
   justify-content:space-between;
-  align-items: center;
   flex-flow: column;
   width: 100%;
   left: -100%;
-  height: 200px;
-  transition: left 0.3s ease-out;
+
 }
 
-.hamburger-checkbox:checked + .hamburger-label{
-
+.hamburger-checkbox:checked + .header-grid {
+  left:0;
+  transition: left 0.2s ease-out;
 }
 
 .hamburger-label {
-  width: 70px;
-  height: 70px;
-  display: block;
-  background: red;
-  cursor: pointer;
+  padding: 40px;
+}
+
+.hamburger-bar1,
+.hamburger-bar2,
+.hamburger-bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #FE3525;
+  margin: 6px 0;
+  margin-left: 30px;
 }
 
 .hamburger-checkbox {
   display: none;
 }
 
-@media (min-width: 900px) {
-  .hamburger-label{
+@media (min-width: 720px){
+  .hamburger-label {
     display:none;
   }
-  .header-grid{
+
+  .header-grid {
+    left:0;
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-flow: row;
-    height: 70px;
-  }
-  .hamburger-checkbox:checked + .header-grid{
-    left: 0;
+    height: 60px;
+    padding: 40px;
   }
 }
