--- a/code/src/components/header/style.css
+++ b/code/src/components/header/style.css
@@ -24,7 +24,7 @@ header a {
 
 }
 
-.hamburger-checkbox:checked + .header-grid {
+.hamburger-checkbox:checked ~ .header-grid {
   left:0;
   transition: left 0.2s ease-out;
 }
@@ -41,6 +41,18 @@ header a {
   background-color: #FE3525;
   margin: 6px 0;
   margin-left: 30px;
+}
+
+.hamburger-checkbox:checked ~ .hamburger-label .hamburger-bar1 {
+ transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.hamburger-checkbox:checked ~ .hamburger-label .hamburger-bar2 {
+ opacity: 0;
+}
+
+.hamburger-checkbox:checked ~ .hamburger-label .hamburger-bar3 {
+ transform: rotate(45deg) translate(-8px, -8px);
 }
 
 .hamburger-checkbox {
